--- a/src/ContractorMgrt.Models/ContractorMgrt.Models.csproj
+++ b/src/ContractorMgrt.Models/ContractorMgrt.Models.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Friend.cs" />
+    <Compile Include="FriendPhoneNumber.cs" />
     <Compile Include="LookupItem.cs" />
+    <Compile Include="Meeting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
